--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/antd": "^1.0.0",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.7",
-    "@types/react": "16.8.19",
+    "@types/react": "^16.8.19",
     "@types/react-dom": "16.8.4",
+    "@types/react-router-dom": "^4.3.3",
+    "antd": "^3.19.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "typescript": "3.5.1"
   },
